# brainweb-dl

./: .gitignore  README.md  pyproject.toml
.github/workflows/: master-cd.yml  test-ci.yml
src/brainweb/: _brainweb.py  brainweb1_tissues.csv  brainweb20_tissues.csv  mri.py
src/brainweb_dl/: __init__.py  _brainweb.py  cli.py  mri.py
src/brainweb_dl/data/: brainweb1_tissues.csv  brainweb20_tissues.csv
tests/: conftest.py  test_brainweb.py
